--- a/src/globals.css
+++ b/src/globals.css
@@ -143,6 +143,10 @@
     @apply max-w-screen-sm flex flex-col items-center w-full gap-6 md:gap-9;
   }
 
+  .home-posts ul {
+    @apply flex flex-col-reverse flex-1 gap-9 w-full;
+  }
+
   .home-creators {
     @apply hidden xl:flex flex-col w-72 2xl:w-465 px-6 py-10 gap-10  overflow-scroll custom-scrollbar;
   }
@@ -186,9 +190,14 @@
     @apply flex flex-col flex-1 items-center gap-10 overflow-scroll py-10 px-5 md:p-14 custom-scrollbar;
   }
 
+  /* Top bar */
+  .topbar {
+    @apply w-full fixed top-0 z-50 bg-dark-2 md:hidden;
+  }
+
   /* Bottom bar */
   .bottom-bar {
-    @apply z-50 flex-between w-full sticky bottom-0 rounded-t-[20px] bg-dark-2 px-5 py-4 md:hidden;
+    @apply z-50 flex-between w-full fixed bottom-0 rounded-t-[20px] bg-dark-2 px-5 py-4 md:hidden;
   }
 
   /* File uploader */
@@ -233,11 +242,6 @@
 
   .post-card_img {
     @apply h-64 xs:h-[400px] lg:h-[450px] w-full rounded-[24px] object-cover mb-5;
-  }
-
-  /* Topbar */
-  .topbar {
-    @apply sticky top-0 z-50 md:hidden bg-dark-2 w-full;
   }
 
   /* Toast */
